k8s/applications/ai/gpt-researcher/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gpt-researcher
  namespace: gpt-researcher
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - 'research.pc-tips.se'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gptr-nextjs
          namespace: gpt-researcher
          port: 3000
